--- a/Road to Recovery/pages/menu.html
+++ b/Road to Recovery/pages/menu.html
@@ -7,42 +7,75 @@
             <ul>
                 <li>
                     <a href="manageRidePats.html" class="waves-effect waves-primary">
-                        <i class="md md-today"></i><span>ניהול ההסעות שלי</span>
+                        <i>
+                            <img src="../../Media/הסעות להיום.png" height="25" width="25" />
+                        </i>
+                        <span>ניהול ההסעות שלי</span>
                     </a>
                 </li>
 
                 <li>
                     <a href="viewRidePats.html" class="waves-effect waves-primary">
-                        <i class="md md-today"></i><span>כל ההסעות</span>
+                        <i>
+                            <img src="../../Media/היסטורית הסעות.png" height="25" width="25" />
+                        </i>
+                        <span>כל ההסעות</span>
                     </a>
                 </li>
 
                 <li>
                     <a href="viewPatient.html" class="waves-effect waves-primary">
-                        <i class="md md-recent-actors"></i><span>חולים</span>
+                        <i>
+                            <img src="../../Media/רשימת חולים.png" height="25" width="25" />
+                        </i>
+                        <span id="patient">חולים</span>
                     </a>
                 </li>
 
                 <li>
                     <a href="viewVolunteer.html" class="waves-effect waves-primary">
-                        <i class="md md-person"></i><span>מתנדבים</span>
+                        <i>
+                            <img src="../../Media/רשימת מתנדבים.png" height="25" width="25" />
+                        </i>
+                        <span>מתנדבים</span>
                     </a>
                 </li>
 
-                <li>
-                    <a href="viewLocation.html" class="waves-effect waves-primary">
-                        <i class="md md-today"></i><span>ניהול מקומות איסוף והורדה</span>
-                    </a>
-                </li>
+
 
                 <li>
                     <a href="viewLog.html" class="waves-effect waves-primary">
-                        <i class="md md-today"></i><span>יומן מערכת</span>
+                        <i>
+                            <img src="../../Media/יומן מערכת.png" height="25" width="25" />
+                        </i>
+
+                        <span>יומן מערכת</span>
                     </a>
                 </li>
                 <li>
-                    <a class="waves-effect waves-primary" onclick="deleteCookie()">
-                        <i class="md md-remove-circle-outline"></i><span>התנתקות מהמערכת</span>
+                    <a class="waves-effect waves-primary" onclick="deleteCookie()" style="margin-bottom:40%;">
+                        <i>
+                            <img src="../../Media/התנתקות מהמערכת.png" height="25" width="25" />
+                        </i>
+                        <span>התנתקות מהמערכת</span>
+                    </a>
+                </li>
+                <li>
+                    <!--<span>למנהל</span>-->
+                    <a href="viewLocation.html" class="waves-effect waves-primary">
+                        <i>
+                            <img src="../../Media/נקודות איסוף.png" height="25" width="25" />
+                        </i>
+                        <span>ניהול נקודות איסוף והורדה</span>
+                    </a>
+                </li>
+                <li>
+                    <!--<span>למנהל</span>-->
+                    <a href="versionForm.html" class="waves-effect waves-primary">
+                        <i>
+                            <img src="../../Media/יומן מערכת.png" height="25" width="25" />
+                        </i>
+                        <span>ניהול גרסאות אפליקציה</span>
                     </a>
                 </li>
             </ul>
