--- a/Road to Recovery/pages/viewLocation.html
+++ b/Road to Recovery/pages/viewLocation.html
@@ -50,7 +50,9 @@
         checkCookie();
         $(document).ready(function () {
 
-        includeHTML();
+            includeHTML();
+            var userName = GENERAL.USER.getUserName();
+            $("#userName").html(userName);
             //adds menu.html content into any "#menu" element
             //$('#menu').load('menu.html');
 
@@ -86,10 +88,10 @@
 
                     for (i in arr_Locations) {
                         var btnStr = ""
-                        var showBtn = "<button type='button' class='btn btn-icon waves-effect waves-light btn-success btn-sm m-b-5' id='show' title='צפייה'><i class='fa fa-wpforms'></i></button>";
+                        //var showBtn = "<button type='button' class='btn btn-icon waves-effect waves-light btn-success btn-sm m-b-5' id='show' title='צפייה'><i class='fa fa-wpforms'></i></button>";
                         var editBtn = "<button type='button' class='btn btn-icon waves-effect waves-light btn-primary btn-sm m-b-5' id='edit' title='עריכה'><i class='ti-pencil'></i></button>";
 
-                        btnStr += showBtn + " " + editBtn;
+                        btnStr += /*showBtn + " " +*/ editBtn;
 
                         if (arr_Locations[i].IsActive == false) {
                             var reactiveBtn = "<button type='button' class='btn btn-icon waves-effect waves-light btn-warning btn-sm m-b-5' id='reactive' title='שחזור'><i class='fa fa-undo' ></i></button>";
@@ -242,14 +244,17 @@
                                 <a href="manageRidePats.html" class="logo"><span>בדרך להחלמה</span></a>
                             </div>
                         </div>
+                        <div class="pull-right">
+                            <a href="passwordForm.html"> <span class="logo" id="userName"></span></a>
+                        </div>
 
 
 
                         <!--Search-->
                         <!--<form role="search" class="navbar-right app-search pull-right hidden-xs">
-                            <input type="text" placeholder="חיפוש..." class="form-control app-search-input">
-                            <a href=""><i class="fa fa-search"></i></a>
-                        </form>-->
+        <input type="text" placeholder="חיפוש..." class="form-control app-search-input">
+        <a href=""><i class="fa fa-search"></i></a>
+    </form>-->
                     </div>
                     <!--/.nav-collapse -->
                 </div>
@@ -275,7 +280,12 @@
 
                                     <li class="active">ניהול נקודות איסוף והורדה</li>
                                 </ol>
-                                <h4 class="page-title">ניהול נקודות איסוף והורדה&nbsp&nbsp<i class="md md-recent-actors"></i></h4>
+                                <h4 class="page-title">
+                                    ניהול נקודות איסוף והורדה&nbsp&nbsp
+                                    <i>
+                                        <img src="../../Media/נקודות איסוף.png" height="25" width="25" />
+                                    </i>
+                                </h4>
                             </div>
                         </div>
                     </div>
@@ -304,7 +314,7 @@
                                             <th>סוג</th>
                                             <th>שם</th>
                                             <th>אזור</th>
-                                            <th>מנהל אזור</th>
+                                            <th>איש קשר</th>
                                             <th>הערות</th>
                                             <th>פעולות</th>
                                         </tr>
@@ -325,7 +335,7 @@
             <!-- end content -->
             <!-- FOOTER -->
             <footer class="footer text-right">
-                2018 © Road to Recovery Management System by Matan Doron
+                2018 © כל הזכויות שמורות לעמותת בדרך להחלמה
             </footer>
             <!-- End FOOTER -->
 
